istio-sample.yaml
##################################################################################################
#  service a
##################################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
  labels:
    app: service-a
spec:
  ports:
  - port: 8081
    name: http
  selector:
    app: service-a
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service-a-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: service-a
        version: v1
    spec:
      containers:
      - name: service-a
        image: menghot/service-a:0.0.1
        command: [ "/bin/bash", "-c", "--" ]
        args: [ "while true; do sleep 30; done;" ]
        imagePullPolicy: Never
        resources:
          limits:
            memory: 256Mi
          requests:
            memory: 64Mi
        ports:
        - containerPort: 8081
---
##################################################################################################
#  service b
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: service-b
  labels:
    app: service-b
spec:
  ports:
  - port: 8082
    name: http
  selector:
    app: service-b
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service-b-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: service-b
        version: v1
    spec:
      containers:
      - name: service-b
        image: menghot/service-b:0.0.1
        command: [ "/bin/bash", "-c", "--" ]
        args: [ "while true; do sleep 30; done;" ]
        imagePullPolicy: Never
        resources:
          limits:
            memory: 256Mi
          requests:
            memory: 64Mi
        ports:
        - containerPort: 8082
---
##################################################################################################
# Service-c service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: service-c
  labels:
    app: service-c
spec:
  ports:
  - port: 8083
    name: http
  selector:
    app: service-c
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service-c-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: service-c
        version: v1
    spec:
      containers:
      - name: service-c
        image: menghot/service-c:0.0.1
        command: [ "/bin/bash", "-c", "--" ]
        args: [ "while true; do sleep 30; done;" ]
        imagePullPolicy: Never
        resources:
          limits:
            memory: 256Mi
          requests:
            memory: 64Mi
        ports:
        - containerPort: 8083
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service-c-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: service-c
        version: v2
    spec:
      containers:
      - name: service-c
        image: menghot/service-c:0.0.1
        command: [ "/bin/bash", "-c", "--" ]
        args: [ "while true; do sleep 30; done;" ]
        imagePullPolicy: Never
        resources:
          limits:
            memory: 256Mi
          requests:
            memory: 64Mi
        ports:
        - containerPort: 8083
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service-c-v3
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: service-c
        version: v3
    spec:
      containers:
      - name: service-c
        image: menghot/service-c:0.0.1
        command: [ "/bin/bash", "-c", "--" ]
        args: [ "while true; do sleep 30; done;" ]
        imagePullPolicy: Never
        resources:
          limits:
            memory: 256Mi
          requests:
            memory: 64Mi
        ports:
        - containerPort: 8083

---
##################################################################################################
# Portal services
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: portal
  labels:
    app: portal
spec:
  type: NodePort
  ports:
  - port: 8080
    nodePort: 30332
    name: http
  selector:
    app: portal
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: portal-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: portal
        version: v1
    spec:
      containers:
      - name: portal
        image: menghot/portal:0.0.1
        command: [ "/bin/bash", "-c", "--" ]
        args: [ "while true; do sleep 30; done;" ]
        imagePullPolicy: Never
        resources:
          limits:
            memory: 256Mi
          requests:
            memory: 64Mi
        ports:
        - containerPort: 8080
          
---
#####################################################################################################
# Ingress resource (gateway)
#####################################################################################################
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-portal
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /portal/.*
        backend:
          serviceName: portal
          servicePort: 8080
---

#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: portal-ingress
#  annotations:
#    ingress.kubernetes.io/rewrite-target: /portal
#spec:
#  rules:
#  - http:
#      paths:
#      - path: /portal
#        backend:
#          serviceName: portal
#          servicePort: 8080
